--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^3.0.0-rc.1",
     "vuex": "^4.0.0-beta.4"
   },
