--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "npm run build && node server.js"
+    "start": "npm i && npm run build && node server.js"
   },
   "dependencies": {
     "axios": "^0.20.0",
     "express": "^4.17.1",
     "serve-static": "^1.14.1",
     "vue": "^3.0.0-rc.1",
-    "vuex": "^4.0.0-beta.4"
+    "vuex": "^4.0.0-beta.4",
+    "vite": "^1.0.0-rc.4"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
