--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
+    "vue-carousel": "^0.18.0",
     "vuex": "^4.0.0-rc.1"
   },
   "devDependencies": {
